--- a/configmap.yaml
+++ b/configmap.yaml
@@ -1,5 +1,5 @@
 ---
-# Source: falco-obsec/templates/configmap.yaml
+# Source: falco-obsec/templates/configmap.yaml asdfadf
 apiVersion: v1
 kind: ConfigMap
 metadata:
